# romrescue.org

./:  requirements.dev.txt  .baseline.json  .codeclimate.yml  .gitignore  .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  Gruntfile.js  Makefile  Procfile  README.rst  clean-thumbnails  db-pull  google-creds.json  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: pythonapp.yml  stale.yaml
ajax/: apps.py  decorators.py  urls.py  views.py
base/: models.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_status.py  0003_auto_20170715_2100.py
dogs/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_auto_20160617_2024.py  0002_auto_20160720_2135.py  0003_auto_20160617_2038.py  0003_auto_20160730_1545.py  0004_auto_20160617_2226.py  0004_auto_20160812_2243.py  0005_auto_20160618_0938.py  0005_auto_20160814_1906.py  0006_auto_20160618_1012.py  0006_dog_status.py  0007_auto_20160626_2111.py  0007_dog_reserved.py  0008_auto_20160626_2115.py  0008_dog_neutered.py  0009_dog_standard_info.py  0009_keypoints.py  0010_dog_leash_of_life.py  0010_keypoints_dogs.py  0011_auto_20160628_2109.py  0011_rescue.py  0012_dog_rescue.py  0012_dogphoto_crop.py  0013_auto_20160629_1953.py  0013_remove_dog_leash_of_life.py  0014_auto_20160702_2153.py  0014_dog_cost.py  0015_auto_20160709_2029.py  0015_auto_20170825_2005.py  0016_dog_oldie.py  0016_status_body.py  (+35 more)
donate/: admin.py  apps.py  models.py  urls.py  views.py
faqs/: admin.py  apps.py  models.py
icons/: #icons.py#  icons.json  icons.py  json.template  python.template  template.css
modulestatus/: __init__.py  admin.py  apps.py  managers.py  models.py
pages/: admin.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  tests.py  tests.py.bak  urls.py  views.py
photocomp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
romrescue/: actions.py  settings.py  sitemaps.py  urls.py  wsgi.py
scss/: _external.scss  _imports.scss  admin.scss  styles.scss
search/: urls.py  views.py
team/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  breadcrumbs.html  donate.html  header.html  minimal.html  nav.html  social-links.html
templates.bak/: header.html
testimonials/: admin.py  apps.py  models.py  urls.py  views.py
websettings/: admin.py  apps.py  models.py  tests.py
(+184 files in other folders)
