[project]
name = "SOS Romrescue"
version = "1.6.0"
description = "Website for SOS Romainan Rescue"
authors = [
    "Ben Gosney <bengosney@googlemail.com>"
]
python = "^3.10.2"
homepage = "https://www.romrescue.org/"
repository = "https://github.com/bengosney/romrescue.org.git"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pycln]
all = true
