[project]
name = "SOS-Romrescue"
version = "1.6.1"
description = "Website for SOS Romainan Rescue"
authors = [
    {name = "Ben Gosney", email = "bengosney@googlemail.com"},
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pycln]
all = true
